# SW-HW-Encoding-Validation

./: README.md
fpga_snn_encoding/scripts/: generate_mnist_for_hls_baru.py  run_hls.tcl
fpga_snn_encoding/scripts/snn_delta_encoding/: hls.app
fpga_snn_encoding/scripts/snn_delta_encoding/solution1/: solution1.aps  solution1.directive  solution1_data.json
fpga_snn_encoding/scripts/snn_delta_encoding/solution1/.autopilot/: .autopilot_exit
fpga_snn_encoding/scripts/snn_delta_encoding/solution1/.autopilot/db/: .message_csim.xml  .message_syn.xml  a.g.1.bc  a.g.2.bc  a.g.2.prechk.bc  a.g.ld.0.bc  a.g.ld.0.bc.clang.reflow.diag.yml  a.g.ld.1.lower.bc  a.g.ld.3.fpc.bc  a.g.ld.4.m2.bc  a.g.ld.5.gdce.bc  a.o.1.tmp.bc  a.o.2.bc  a.o.3.bc  a.pp.bc  all.directive.json  apatb_delta_encoding.cpp  apatb_delta_encoding_ir.bc  apatb_delta_encoding_ir.ll  autopilot.rtl.models.tcl  autopilot.rtl.models.txt  burst.xml  cmplx.3.000.fe.link.json  cmplx.3.001.fe.unroll-raw.json  cmplx.3.002.fe.unroll-simplified.json  cmplx.3.003.fe.inline-raw.json  cmplx.3.004.fe.inline-simplified.json  cmplx.3.005.fe.array-partition-raw.json  cmplx.3.006.fe.array-partition-simplified.json  cmplx.3.008.fe.array-reshape.json  cmplx.3.009.fe.infer-access-pattern.json  cmplx.3.013.fe.performance-final.json  cmplx.3.015.fe.lowering.json  cmplx.3.016.fe.opt.json  cmplx.5.0.fe.end.json  delta_encoding.DependenceCheck.tcl  delta_encoding.adb  delta_encoding.bind.adb  delta_encoding.bind.adb.xml  delta_encoding.compgen.dataonly.tcl  (+55 more)
fpga_snn_encoding/scripts/snn_latency_encoding/: hls.app
fpga_snn_encoding/scripts/snn_latency_encoding/solution1/: solution1.aps  solution1.directive  solution1_data.json
fpga_snn_encoding/scripts/snn_latency_encoding/solution1/.autopilot/: .autopilot_exit
fpga_snn_encoding/scripts/snn_latency_encoding/solution1/.debug/: latency_encoding.protoinst
fpga_snn_encoding/scripts/snn_latency_encoding/solution1/impl/misc/drivers/latency_encoding_v1_0/src/: CMakeLists.txt  Makefile  xlatency_encoding.c  xlatency_encoding_hw.h
fpga_snn_encoding/scripts/snn_rate_encoding/: hls.app
fpga_snn_encoding/scripts/snn_rate_encoding/solution1/: solution1.aps  solution1.directive  solution1_data.json
fpga_snn_encoding/scripts/snn_rate_encoding/solution1/.autopilot/: .autopilot_exit
fpga_snn_encoding/scripts/snn_rate_encoding/solution1/.autopilot/db/driver/src/: CMakeLists.txt  xrate_encoding.h  xrate_encoding_hw.h  xrate_encoding_linux.c
fpga_snn_encoding/src/: encoding.cpp  encoding.h  mnist_data.h  testbench_delta.cpp  testbench_latency.cpp  testbench_rate.cpp
sofware_snn_encoding/: 2_training_evaluation.py  snn_delta_full.pth  snn_latency_full.pth  snn_rate_full.pth  snn_utils.py
(+316 files in other folders)
